@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Wed Oct 17 18:33:23 2001 -->
+<!-- Thu Oct 18 10:37:52 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -72,7 +72,7 @@ Overview
 <A HREF="inuse.html">TMDA In Use</A>
 </TD></TR>
 <TR><TD BGCOLOR="#cccccc">
-<A HREF="resources.html">Other Resources</A>
+<A HREF="resources.html">External Resources</A>
 </TD></TR>
 <TR><TD BGCOLOR="#cccccc">&nbsp;
 <TR><TD BGCOLOR="#191970"><B><FONT COLOR="#ffffff">
