@@ -1,7 +1,7 @@
-Title: Other TMDA Resources
+Title: External TMDA Resources
 Links: overview-links.h usage-links.h support-links.h
 
-<h3>Other TMDA Resources</h3>
+<h3>External TMDA Resources</h3>
 
 <li>TMDA's <a href="http://sourceforge.net/projects/tmda/" TARGET="Resource Window">
 Project Management Site at Sourceforge</a><br><br>
