@@ -1,15 +1,15 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Mon Oct 15 17:47:31 2001 -->
+<!-- Thu Oct 18 10:37:53 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
-Title: Other TMDA Resources
+Title: External TMDA Resources
 
 -->
 
 <HEAD>
-<TITLE>Other TMDA Resources</TITLE>
+<TITLE>External TMDA Resources</TITLE>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff" TEXT="#000000"
@@ -72,7 +72,7 @@ Overview
 <A HREF="inuse.html">TMDA In Use</A>
 </TD></TR>
 <TR><TD BGCOLOR="#cccccc">
-<b>Other Resources</b>
+<b>External Resources</b>
 </TD></TR>
 <TR><TD BGCOLOR="#cccccc">&nbsp;
 <TR><TD BGCOLOR="#191970"><B><FONT COLOR="#ffffff">
@@ -123,7 +123,7 @@ Author
 <!-- end of sidebar cell -->
 <!-- start of body cell -->
 <TD VALIGN=TOP WIDTH="90%"><BR>
-<h3>Other TMDA Resources</h3>
+<h3>External TMDA Resources</h3>
 
 <li>TMDA's <a href="http://sourceforge.net/projects/tmda/" TARGET="Resource Window">
 Project Management Site at Sourceforge</a><br><br>
