@@ -1,5 +1,7 @@
 2001-10-18  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
+	* resources.ht (Links): Changed "Other" to "External".
+
 	* index.ht (Links): Emphasize test mailto: link.
 
 2001-10-17  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
